--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ ACLOCAL_AMFLAGS  = -I macros ${ACLOCAL_FLAGS}
 
 # Make warnings always fatal at distcheck time, and disable execution
 # of tools that change files not installed by the package itself
-DISTCHECK_CONFIGURE_FLAGS = --enable-warnings=fatal --disable-update-mime-database
+DISTCHECK_CONFIGURE_FLAGS = --enable-warnings=fatal
 
 pkgconfigdir = $(libdir)/pkgconfig
 nodist_pkgconfig_DATA = $(MURRAYC_SUFFIX_TREE_MODULE_NAME).pc
